tests/should_fail/match_list_on_bool.nv
module fail
// List pattern on a bool — type mismatch
let b = true
let r = match b {
    [] => "empty",
    _ => "ok",
}
